Update package.json project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sourcefit-test",
+  "name": "github-search-with-graph",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
