--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-link-context": "^1.0.8",
     "axios": "^0.18.0",
     "axios-extensions": "^3.0.2",
+    "classnames": "^2.2.6",
     "date-fns": "^1.29.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
@@ -23,6 +24,7 @@
     "react-dom": "^16.3.2",
     "react-loading": "^2.0.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
