--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^0.18.0",
     "axios-extensions": "^3.0.2",
     "classnames": "^2.2.6",
+    "d3-axis": "^1.0.8",
+    "d3-scale": "^2.1.0",
+    "d3-selection": "^1.3.0",
     "date-fns": "^1.29.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
@@ -22,6 +25,7 @@
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
+    "react-faux-dom": "^4.2.0",
     "react-loading": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
