--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "d3-axis": "^1.0.8",
     "d3-scale": "^2.1.0",
+    "d3-scale-chromatic": "^1.3.0",
     "d3-selection": "^1.3.0",
     "date-fns": "^1.29.0",
     "graphql": "^0.13.2",
