--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3-scale": "^2.1.0",
     "d3-scale-chromatic": "^1.3.0",
     "d3-selection": "^1.3.0",
+    "d3-transition": "^1.1.1",
     "date-fns": "^1.29.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
