--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios-extensions": "^3.0.2",
     "classnames": "^2.2.6",
     "d3": "^5.5.0",
+    "d3-selection-multi": "^1.0.1",
     "date-fns": "^1.29.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
