--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^1.29.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "izitoast": "^1.3.0",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.3.2",
@@ -34,6 +35,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
     "remove": "^0.1.5",
     "tachyons": "^4.9.1"
   },
