--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.9.2",
     "izitoast": "^1.3.0",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
