Make app responsive

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
+    "react-burger-menu": "^2.5.2",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.3.2",
     "react-faux-dom": "^4.2.0",
     "react-loading": "^2.0.2",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
+    "react-resize-detector": "^3.0.1",
     "react-router-dom": "^4.3.1",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
