--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "apollo-client-preset": "^1.0.8",
     "apollo-link-context": "^1.0.8",
-    "axios": "^0.18.0",
-    "axios-extensions": "^3.0.2",
     "classnames": "^2.2.6",
     "d3": "^5.5.0",
     "d3-selection-multi": "^1.0.1",
@@ -36,9 +34,7 @@
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
-    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
-    "remove": "^0.1.5",
     "tachyons": "^4.9.1"
   },
   "devDependencies": {
@@ -46,15 +42,20 @@
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-minify-constant-folding": "^0.4.3",
+    "babel-plugin-preval": "^3.0.0",
     "babel-plugin-tailcall-optimization": "^1.0.12",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-entries": "^1.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-webpack-alias": "^2.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "chunk-manifest-webpack-plugin": "^1.1.2",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
@@ -67,6 +68,7 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-standard": "^3.1.0",
+    "faster.js": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.2.0",
     "style-loader": "^0.21.0",
@@ -74,7 +76,6 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.13.0",
-    "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   }
